# KloudKompass

./: .gitignore  CHANGELOG.md  CHANGELOG_PHASE_2_6.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  Tests.md  fix_em_dashes.py  fix_root_docs.py  git_commit_msg.txt  git_msg.txt  pyproject.toml  rename_docs.py  requirements.txt  test_select.py  test_select2.py  test_views.py
.coderwa/: ARCHITECTURE.md  CoderWa.md  master_report.md
.coderwa/agents/: backend-specialist.md  cli-tui-specialist.md  code-archaeologist.md  database-architect.md  debugger.md  devops-engineer.md  documentation-writer.md  explorer-agent.md  frontend-specialist.md  game-developer.md  mobile-developer.md  orchestrator.md  penetration-tester.md  performance-optimizer.md  product-manager.md  product-owner.md  project-planner.md  qa-automation-engineer.md  security-auditor.md  seo-specialist.md  test-engineer.md
.coderwa/brain/: 01_identity_personas.md  02_protocols.md  03_error_patterns.md  04_phases_waves.md  05_user_flows.md  06_strategic_plan.md
.coderwa/kloudkompass_data/context/: state.md  system_map.md  tech_stack.md
.coderwa/kloudkompass_data/docs/: api_routes.md  architecture_diagram.md  database_schema.md  design_system.md  master_plan.md
.coderwa/kloudkompass_data/memory/: debugging.md  walkthrough.md
.coderwa/rules/: GEMINI.md
.coderwa/scripts/: auto_preview.py  checklist.py  session_manager.py  verify_all.py
.coderwa/skills/: doc.md
.coderwa/workflows/: brainstorm.md  create.md  debug.md  deploy.md  enhance.md  orchestrate.md  plan.md  preview.md  status.md  test.md  ui-ux-pro-max.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
bashcloud/: __init__.py  cli.py  config_manager.py
bashcloud/aws/: __init__.py  cost.py  inventory.py  security.py
bashcloud/azure/: __init__.py  cost.py  inventory.py
bashcloud/core/: __init__.py  cost_base.py  exceptions.py  health.py  models.py  provider_base.py  provider_factory.py
bashcloud/dashboard/: __init__.py  app.py
bashcloud/gcp/: __init__.py  cost.py  inventory.py
bashcloud/infra/: __init__.py  aws_cli_adapter.py  base_adapter.py  cache.py  cli_adapter.py
bashcloud/tui/: __init__.py  cost_menu.py  doctor.py  inventory_menu.py  main_menu.py  navigation.py  prompts.py  screens.py  security_menu.py  session.py
bashcloud/utils/: __init__.py  exports.py  formatters.py  logger.py  pagination.py  parsers.py  subprocess_helpers.py
completions/: kloudkompass.bash  kloudkompass.fish  kloudkompass.zsh
debian/: changelog  control  copyright  rules
kloudkompass/: __init__.py  cli.py  config_manager.py
kloudkompass/aws/: __init__.py  compute.py  cost.py  database.py  iam.py  inventory.py  networking.py  security.py  storage.py
kloudkompass/azure/: __init__.py  compute.py  cost.py  inventory.py
kloudkompass/core/: __init__.py  auth_manager.py  cache_manager.py  compute_base.py  cost_base.py  database_base.py  exceptions.py  health.py  iam_base.py  installer.py  keymap.py  networking_base.py  provider_base.py  provider_factory.py  scheduler.py  security_base.py  storage_base.py  updater.py  workspace_registry.py
kloudkompass/dashboard/: __init__.py  app.py
kloudkompass/gcp/: __init__.py  cost.py  inventory.py
kloudkompass/infra/: __init__.py  aws_cli_adapter.py  azure_cli_adapter.py  base_adapter.py  cache.py  cli_adapter.py
kloudkompass/tui/: __init__.py  compute_menu.py  cost_menu.py  database_menu.py  doctor.py  footer.py  iam_menu.py  inventory_menu.py  main_menu.py  menu_result.py  navigation.py  network_menu.py  prompts.py  provider_setup.py  provider_setup_screen.py  screens.py  security_menu.py  session.py  settings_menu.py  storage_menu.py
kloudkompass/utils/: __init__.py  exports.py  formatters.py  logger.py  pagination.py  parsers.py  subprocess_helpers.py
tests/: conftest.py  test_analytics_widgets.py  test_aws_adapter.py  test_aws_compute.py  test_aws_networking.py  test_aws_storage.py  test_branding_consistency.py  test_cache.py  test_cache_lru.py  test_cases.json  test_cli_integration.py  test_cli_tag_filtering.py  test_compute_menu.py  test_config_manager.py  test_cost_aws.py  test_cost_aws_paged.py  test_cost_cli_integration.py  test_dashboard_attribution.py  test_dashboard_export.py  test_dashboard_parity.py  test_dashboard_views.py  test_doctor_module.py  test_doctor_version.py  test_edge_cases.py  test_exceptions_module.py  test_file_cache.py  test_footer_module.py  test_formatters_empty.py  test_health_module.py  test_infra_adapter.py  test_integration_checklist.md  test_legal_attribution.py  test_lifecycle_model.py  test_menu_result.py  test_models_costrecord.py  test_multicloud_ux.py  test_navigation_model.py  test_navigator_advanced.py  test_negative_cases.py  test_network_menu.py  (+17 more)
(+151 files in other folders)
