# pyproject.toml
# ---------------
# pyproject.toml instead of setup.py used because it is the modern standard
# for Python packaging. This file declares all metadata, dependencies, and
# build configuration in one place. When someone runs pip install -e . this
# file tells pip how to build and install the kloudkompass package.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kloudkompass"

dynamic = ["version"]
description = "Kloud Kompass – Terminal-first multi-cloud CLI for cloud practitioners who prefer shell workflows over GUIs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "TTox.Tech", email = "contact@ttox.tech"}
]
keywords = ["cloud", "cli", "aws", "azure", "gcp", "terminal", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=8.1",
    "rich>=10.9",
    "python-dotenv>=1.0",
    "toml>=0.10",
    "textual>=0.50",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.26.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
kloudkompass = "kloudkompass.cli:main"

[project.urls]
Homepage = "https://github.com/MrCh0p808/KloudKompass"
Documentation = "https://github.com/MrCh0p808/KloudKompass#readme"
Repository = "https://github.com/MrCh0p808/KloudKompass"
Issues = "https://github.com/MrCh0p808/KloudKompass/issues"

[tool.setuptools.dynamic]
version = {attr = "kloudkompass.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["kloudkompass*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
